packages/jsii/test/negatives/neg.static-method-name.ts
///!MATCH_ERROR: ERROR 'METHOD' must use camel-case

export class MyClass {
    METHOD() {
        return "hi";
    }
}
